base/fisi-lernplattform/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fisi-lernplattform
  namespace: apps
spec:
  selector:
    app: fisi-lernplattform
  ports:
    - port: 80
      targetPort: 80
